# proyecto-final-grupo-5-1

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
MD_files/: grafo.gv
doc/: usage.md
src/: Console_View.cpp  main  main.cpp  test.cpp  utils.cpp  utils.h
src/Board/: Board.cpp  Board.h
src/Bot/: Bot.cpp  Bot.h  Engines.cpp  engines.cpp  engines.h
src/Config/: Config.cpp  Config.h
src/Game/: Game.cpp  Game.h
src/Player/: Player.cpp  Player.h
src/PlayerController/: PlayerController.cpp  PlayerController.h
src/Square/: Square.cpp  Square.h
src/Static/: background.png.kra  big_buttons.kra
src/System/: System.cpp  System.h
src/Turn/: Turn.cpp  Turn.h
src/View/: Button.cpp  Button.h  Movement.cpp  Movement.h  System.cpp  System.h  TextBox.cpp  TextBox.h  TextField.cpp  View.cpp  View.h  linux_sfml_app  main.cpp  sfml-app  smfml-app  windows_sfml_app
src/assets/source/: big_buttons.kra
